force-app/main/default/objects/Private_Client__c/Private_Client__c.object-meta.xml
<CustomObject>
    <label>Private Client</label>
    <nameField>
        <label>Private Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Private Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>