force-app/main/default/objects/Private_Client__c/fields/High_Profile_Markers__c.field-meta.xml
<CustomField>
    <fullName>High_Profile_Markers__c</fullName>
    <label>High Profile Markers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public Figure</fullName>
            </value>
            <value>
                <fullName>VIP Referral</fullName>
            </value>
            <value>
                <fullName>Media-Sensitive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>