force-app/main/default/objects/Private_Client__c/fields/Primary_Client_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Client_Full_Name__c</fullName>
    <label>Primary Client Full Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>