force-app/main/default/objects/Private_Client__c/fields/Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone__c</fullName>
    <label>Primary Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>