force-app/main/default/objects/Private_Client__c/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <label>Referral Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>