force-app/main/default/objects/Private_Client__c/fields/Secondary_Client_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Client_Full_Name__c</fullName>
    <label>Secondary Client Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>